# virt-playground

./: .gitignore  AGENTS.md  README.md
docs/: architecture.md  bug-landscape.md  components.md  ecosystem-map.md  live-migration.md  migration-toolkit.md  networking.md  storage.md  vm-lifecycle-and-isolation.md  vmware-comparison.md
docs/components/: README.md  virt-api.md  virt-controller.md  virt-handler.md
docs/components/cdi/: README.md
docs/components/kubevirt/: README.md  client-tools.md  container-disks.md  hotplug-landscape.md  pvc-disks.md  virt-handler.md  virt-launcher.md  virt-operator.md  vm-console-access.md  vm-metrics.md  vmi-phases.md
docs/components/kubevirt-plugin/: README.md
docs/components/mtv/: README.md  migration-pod.md
labs/crc/: 02-create-vm.md
labs/crc-esxi-mtv/: 01-install-openshift-virtualization.md  03-nested-esxi-setup.md  04-migrate-vm-with-mtv.md  README.md
labs/crc-ovirt-mtv/: 01-install-ovirt-engine.md  02-configure-ovirt.md  03-create-vm-on-ovirt.md  04-migrate-vm-with-mtv.md  README.md
labs/esxi/: 01-nested-esxi-setup.md  02-migrate-vm-with-mtv.md
labs/mtv-internals/: 01-nbd-kit.md  02-libguestfs.md  03-virt-v2v.md  04-vddk.md  05-warm-migration.md  06-storage-offload.md  07-end-to-end-flow.md  README.md  resources.md
labs/reverse-engineer-console/: README.md  console_client.py  pyproject.toml  vnc_proxy.py
labs/vcenter-nested/: 01-setup-lab-dns.md  02-prepare-esxi-host.md  03-deploy-vcenter.md  04-configure-vcenter.md  05-create-test-vm.md  06-migrate-vm-with-mtv.md  README.md
